product/standard/grafana-prometheus-pro/pushgateway-aliyun/pushgateway-aliyun-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pushgateway-aliyun
  namespace: monitoring
  labels:
    app: pushgateway-aliyun
spec:
  selector:
    app: pushgateway-aliyun
  #type: NodePort
  ports:
    - name: pushgateway-aliyun
      port: 9091
      targetPort: 9091
